--- a/public/styles/_navbar.scss
+++ b/public/styles/_navbar.scss
@@ -18,12 +18,21 @@
     }  
 
     .collapse.navbar-collapse{
-        
         .navbar-nav.mr-auto{
             :hover{
                 background-color: rgb(240, 227, 227);
             }
 
+        }
+        .navbar-nav.ml-auto{
+            .nav-link{
+                margin-bottom: 0;
+            }
+            li{
+                &:hover{
+                    background-color: rgb(240, 227, 227);
+                }
+            }
         }
     }
 }
