--- a/public/styles/address.css
+++ b/public/styles/address.css
@@ -41,21 +41,27 @@
 }
 
 .manage-address {
+  margin-left: 5px !important;
   margin-top: 4vh;
   margin-bottom: 4vh;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
+}
+
+.manage-address h5 {
+  padding-top: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 25px;
 }
 
 .manage-address .edit-btn {
+  color: black;
   position: absolute;
   top: 4%;
-  right: 20%;
+  left: 30%;
   margin-top: 2px;
   padding: 0;
-  width: 4vh;
-  height: 4vh;
+  width: 5vh;
+  height: 5vh;
   border: none;
 }
 
@@ -70,11 +76,12 @@
   margin: 0;
   padding: 2%;
   width: 100%;
-  border-top: 1px solid #dedede;
+  border-top: 3px solid #b1adad;
 }
 
 .manage-address .current-address h6 {
-  padding-left: 2%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .manage-address .current-address .personal-info {
@@ -85,10 +92,10 @@
 .manage-address .current-address .address-container {
   margin-left: 0;
   margin-right: 0;
-  padding: 3vh 0;
-  padding-left: 6%;
+  padding-left: 2%;
   width: 100%;
-  border-top: 1px dashed #dedede;
+  border-top: 3px dashed #b1adad;
+  border-bottom: 3px dashed #b1adad;
 }
 
 .manage-address .current-address .address-container .address-info {
@@ -99,7 +106,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  font-size: 0.9rem;
+  font-size: 1rem;
 }
 
 .manage-address .current-address .address-container .address-info .btn {
@@ -123,24 +130,23 @@
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  border-top: 1px solid #dedede;
+  border-top: 3px solid #b1adad;
 }
 
 .manage-address .add-address .input-address {
-  padding-left: 1%;
-  width: 95%;
-  display: inline-block;
+  width: 70%;
+  display: block;
 }
 
 .manage-address .add-address .btn {
   position: absolute;
   top: 45%;
-  right: 0%;
+  right: 25%;
   padding: 0%;
   width: 4vw;
   height: 4vw;
   display: inline-block;
-  font-size: 0.75rem;
+  font-size: 1rem;
 }
 
 .manage-address .add-address .btn-outline-success {
