--- a/public/styles/address.scss
+++ b/public/styles/address.scss
@@ -35,18 +35,26 @@
 }
 
 .manage-address {
+    h5{
+        padding-top: 5px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        font-size: 25px;
+    }
+    margin-left:5px !important;
     margin-top: 4vh;
     margin-bottom: 4vh;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
+    //box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+    //border-radius: 10px;
     .edit-btn {
+        color:black;
         position: absolute;
         top: 4%;
-        right: 20%;
+        left: 30%;
         margin-top: 2px;
         padding: 0;
-        width: 4vh;
-        height: 4vh;
+        width: 5vh;
+        height: 5vh;
         border: none;
         svg {
             position: absolute;
@@ -59,9 +67,12 @@
         margin: 0;
         padding: 2%;
         width: 100%;
-        border-top: 1px solid #dedede;
+        border-top: 3px solid rgb(177, 173, 173);
         h6 {
-            padding-left: 2%;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bold;
+            //font-size: 2px;
+            //padding-left: 2%;
         }
         .personal-info {
             margin: 0;
@@ -70,15 +81,16 @@
         .address-container {
             margin-left: 0;
             margin-right: 0;
-            padding: 3vh 0;
-            padding-left: 6%;
+            //padding: 3vh 0;
+            padding-left: 2%;
             width: 100%;
-            border-top: 1px dashed #dedede;
+            border-top: 3px dashed rgb(177, 173, 173);
+            border-bottom: 3px dashed rgb(177, 173, 173);
             .address-info {
                 width: 90%;
                 display: inline-flex;
                 justify-content: space-between;
-                font-size: 0.9rem;
+                font-size: 1rem;
                 
                 .btn {
                     position: relative;
@@ -100,21 +112,21 @@
         padding: 2%;
         width: 100%;
         height: fit-content;
-        border-top: 1px solid #dedede;
+        border-top: 3px solid rgb(177, 173, 173);
         .input-address {
-            padding-left: 1%;
-            width: 95%;
-            display: inline-block;
+            //padding-left: 1%;
+            width: 70%;
+            display: block;
         }
         .btn {
             position: absolute;
             top: 45%;
-            right: 0%;
+            right: 25%;
             padding: 0%;
             width: 4vw;
             height: 4vw;
             display: inline-block;
-            font-size: 0.75rem;
+            font-size: 1rem;
         }
         .btn-outline-success {
             border: none;
