--- a/public/styles/loginForm.css
+++ b/public/styles/loginForm.css
@@ -9,14 +9,24 @@
   height: auto;
 }
 
+.home-wrapper .container .form-group .form-check-input {
+  margin-left: 5px;
+}
+
+.home-wrapper .container .form-group .form-check-label {
+  margin-left: 20px;
+}
+
 .home-wrapper .login-wrapper {
+  padding: 7px;
+  right: 0;
   position: fixed;
   z-index: 5;
-  width: 100%;
-  height: 100vh;
-  border: 1px solid red;
+  width: 50%;
+  height: 300px;
+  border: 3px solid black;
   visibility: hidden;
-  background-color: white;
+  background-color: #dad3d3;
 }
 
 .home-wrapper .active {
