--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -5,15 +5,25 @@
     overflow-y: auto;
     .container{
         height: auto;
+        .form-group{
+            .form-check-input{
+                margin-left:5px;
+            }
+            .form-check-label{
+                margin-left:20px;
+            }
+        }
     }
     .login-wrapper {
+        padding: 7px;
+        right: 0;
         position: fixed;
         z-index: 5;
-        width: 100%;
-        height: 100vh;
-        border: 1px solid red;
+        width: 50%;
+        height: 300px;
+        border: 3px solid black;
         visibility: hidden;
-        background-color: white;
+        background-color: rgb(218, 211, 211);
         //display: none;
     }
 
