--- a/public/styles/product.css
+++ b/public/styles/product.css
@@ -1,4 +1,10 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+.container h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 50px;
+}
+
 .product {
   padding: 2vh 2vw;
   display: -webkit-box;
@@ -71,6 +77,18 @@
   width: 30%;
 }
 
+.product .product-info h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.product .product-info h6, .product .product-info p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  font-size: 19px;
+}
+
 .product .product-info .alternative {
   display: table;
   width: 100%;
@@ -99,9 +117,13 @@
   height: 10vh;
   border: none;
   border-radius: 5px;
-  background-color: #FFC107;
-  color: #F8F9FA;
+  background-color: #c0b40e;
+  color: black;
   font-size: 90%;
+}
+
+.product .product-info .purchase-btn:hover {
+  background-color: #9c930f;
 }
 
 .product .product-info .divider {
@@ -147,7 +169,8 @@
 }
 
 .product .product-info .btn-group .grid-item:focus {
-  border: 1px solid red;
+  background-color: #c0b40e;
+  border: 1px solid black;
 }
 
 .product .rightInfo {
@@ -164,6 +187,11 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   overflow: hidden;
+}
+
+.product .rightInfo .font-weight-bold.bg-warning.text-light.label {
+  background-color: #c0b40e !important;
+  color: black !important;
 }
 
 .product .rightInfo .more-info {
@@ -188,6 +216,7 @@
 }
 
 .product .rightInfo .more-info ul li svg {
+  color: black !important;
   position: relative;
   top: 1vh;
 }
@@ -219,6 +248,11 @@
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
+}
+
+.additional-info .about-product h4 {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .additional-info #rating {
@@ -253,7 +287,7 @@
 .additional-info #rating input:checked ~ label,
 .additional-info #rating:not(:checked) > label:hover,
 .additional-info #rating:not(:checked) > label:hover ~ label {
-  color: #FFD700;
+  color: #c0b40e;
 }
 
 .additional-info #rating input:checked + label:hover,
@@ -266,7 +300,7 @@
 .additional-info .form-group {
   position: relative;
   width: 100%;
-  height: 25vh;
+  height: 15vh;
 }
 
 .additional-info .form-group .input-comment {
@@ -292,10 +326,13 @@
 }
 
 .additional-info .comment-container .comment-element {
+  border-top: 3px dashed #b1adad;
+  border-bottom: 3px dashed #b1adad;
   margin: 1vh 0;
 }
 
 .additional-info .comment-container .comment-element .comment-info {
+  font-size: 20px;
   padding: 0 1vw;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -311,11 +348,12 @@
 
 .additional-info .comment-container .comment-element .comment-info .time {
   margin: 0;
-  font-size: 70%;
+  font-size: 90%;
 }
 
 .additional-info .comment-container .comment-element .content {
   padding: 1em;
+  font-weight: normal;
   border-radius: 15px;
 }
 
