--- a/public/styles/_returnpolicy.scss
+++ b/public/styles/_returnpolicy.scss
@@ -11,7 +11,8 @@ body {
 
     // position: relative;
     // left: 20vw;
-
+    // position: relative;
+    // left: 20vw;
     h1 {
         text-align: center;
     }
