--- a/public/styles/_warranty.scss
+++ b/public/styles/_warranty.scss
@@ -1,11 +1,13 @@
 .warranty {
 
+
     position: relative;
     //left: 20vw;
 
     // position: relative;
     // left: 20vw;
-
+    // position: relative;
+    // left: 20vw;
     h1 {
         text-align: center;
     }
