--- a/public/styles/address.scss
+++ b/public/styles/address.scss
@@ -50,7 +50,7 @@
         color:black;
         position: absolute;
         top: 4%;
-        left: 30%;
+        left: 390px;
         margin-top: 2px;
         padding: 0;
         width: 5vh;
