--- a/public/styles/_installment.scss
+++ b/public/styles/_installment.scss
@@ -1,10 +1,12 @@
 .installment {
 
+
     position: relative;
     //left: 20vw;
     // position: relative;
     // left: 20vw;
-
+    // position: relative;
+    // left: 20vw;
 
     h1 {
         text-align: center;
