--- a/public/styles/loginForm.scss
+++ b/public/styles/loginForm.scss
@@ -9,12 +9,27 @@
     .login-wrapper {
         position: fixed;
         z-index: 5;
-        width: 100%;
-        height: 100vh;
-        border: 1px solid red;
-        visibility: hidden;
+         left: 50%;
+         top: 50%;
+         transform: translate(-50%, -50%);
+         width: 600px;
+         height: 400px;
+         border :1px solid red;
         background-color: white;
-        //display: none;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        form{
+            width: 80%;
+            height: 80%;
+            margin: auto;
+            display:flex;
+            flex-direction: column;
+            justify-content: center;
+            .login-title{
+
+            }
+        }
     }
 
     .active {
