--- a/public/styles/location.css
+++ b/public/styles/location.css
@@ -1,11 +1,60 @@
-.footer-container .col1 .location-wrapper {
+.footer-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-top: solid;
+  background-color: #333;
+  padding: 0px 16px;
+}
+
+.footer-container .col1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 24vw;
+  height: 100%;
+  top: 0;
+  min-height: 200px;
+}
+
+.footer-container .col1 h3 {
+  color: #fff;
+}
+
+.footer-container .col1 ul {
+  padding: 0px;
+}
+
+.footer-container .col1 ul li {
+  list-style: none;
+  color: #888;
+}
+
+.footer-container .col1 ul li:hover {
+  color: #fff;
+}
+
+.footer-container .location-wrapper {
   width: 100%;
   height: 100%;
   min-height: 400px;
 }
 
-.footer-container .col1 .location-wrapper .map {
-  height: 400px;
+.footer-container .location-wrapper .map {
+  height: 200px;
   width: 100%;
 }
 /*# sourceMappingURL=location.css.map */
