--- a/public/styles/location.scss
+++ b/public/styles/location.scss
@@ -1,16 +1,48 @@
-.footer-container{
-    .col1{
-        //border: 1px solid green;
-        .location-wrapper {
-            width: 100%;
-            height: 100%;
-            min-height: 400px;
-            .map {
-                height: 400px;
-                width: 100%;
-                // border: 1px solid green;
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: solid;
+    background-color: #333;
+    padding: 0px 16px;
+
+    .col1 {
+        h3 {
+            color: #fff;
+        }
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 24vw;
+        height: 100%;
+        top: 0;
+        min-height: 200px;
+
+        ul {
+            padding: 0px;
+
+            li {
+                list-style: none;
+                color: #888;
+
+                &:hover {
+                    color: #fff;
+                }
             }
+        }
+
+    }
+
+    .location-wrapper {
+        width: 100%;
+        height: 100%;
+        min-height: 400px;
+
+        .map {
+            height: 200px;
+            width: 100%;
+            // border: 1px solid green;
         }
     }
 }
-
